[project]
name = "highjump-gym"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mujoco>=3.9.0",
    "mujoco-mjx>=3.9.0",
    "imageio[ffmpeg]>=2.34",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/highjump_gym"]
